log
Wed 10 May 2023 06:57:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘mont’ [-Werror=unused-variable]
   36 |   Heap *mont = (Heap*)malloc(sizeof(Heap));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
eeff082
Wed 10 May 2023 06:57:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
25421a9
Wed 10 May 2023 06:59:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘mont’ [-Werror=unused-variable]
   36 |   Heap *mont = (Heap*)malloc(sizeof(Heap));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
4a1787c
Wed 10 May 2023 07:00:52 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:9: error: unused variable ‘array’ [-Werror=unused-variable]
   37 |   Heap *array = (Heap*)malloc(sizeof(heapElem));
      |         ^~~~~
heap.c:36:9: error: unused variable ‘mont’ [-Werror=unused-variable]
   36 |   Heap *mont = (Heap*)malloc(sizeof(Heap));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
bd01859
Thu 11 May 2023 12:00:44 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:17: error: initialization of ‘Heap *’ {aka ‘struct Heap *’} from incompatible pointer type ‘heapElem *’ {aka ‘struct nodo *’} [-Werror=incompatible-pointer-types]
   37 |   Heap *array = (heapElem*)malloc(sizeof(heapElem));
      |                 ^
heap.c:37:9: error: unused variable ‘array’ [-Werror=unused-variable]
   37 |   Heap *array = (heapElem*)malloc(sizeof(heapElem));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
02d2d02
Thu 11 May 2023 12:01:29 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
6713a78
Thu 11 May 2023 12:01:43 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
79aa705
Thu 11 May 2023 12:01:51 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
91ccd7d
Thu 11 May 2023 12:02:12 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
444ddc0
Thu 11 May 2023 12:05:08 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:10: error: ‘mont’ undeclared (first use in this function)
   21 |   return mont -> heapArray[0] -> data;
      |          ^~~~
heap.c:21:10: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
759fe5d
Thu 11 May 2023 12:05:16 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:29: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   return pq -> heapArray[0] -> data;
      |                             ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f97b3b0
Thu 11 May 2023 12:06:06 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9205978
Thu 11 May 2023 12:06:37 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|3
total_score: 10/70
1c8c49d
Thu 11 May 2023 12:07:01 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
33f4fcd
Thu 11 May 2023 06:59:28 PM UTC: 
 heap.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:5: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   30 |   pq->priority[pq->size] = data;
      |     ^~
heap.c:33:21: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   33 |   while (i > 0 && pq->priority[i] > pq->priority[(i-1)/2]) {
      |                     ^~
heap.c:33:39: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   33 |   while (i > 0 && pq->priority[i] > pq->priority[(i-1)/2]) {
      |                                       ^~
heap.c:34:18: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   34 |     int aux = pq -> priority[(i-1)/2];
      |                  ^~
heap.c:35:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   35 |     pq->priority[(i-1)/2] = pq->priority[i];
      |       ^~
heap.c:35:31: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   35 |     pq->priority[(i-1)/2] = pq->priority[i];
      |                               ^~
heap.c:36:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   36 |     pq-> priority[i] = aux;
      |       ^~
Compilation failed
cbf608c
Thu 11 May 2023 07:02:41 PM UTC: 
 heap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  2|2
total_score: 20/70
4527cea
Thu 11 May 2023 07:02:51 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
12511b9
Thu 11 May 2023 07:04:21 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|1
total_score: 45/70
0eb9eaa
Thu 11 May 2023 07:06:20 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
6df89e1
Thu 11 May 2023 07:06:31 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
4bd0f1c
Thu 11 May 2023 07:06:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
a3f0101
Thu 11 May 2023 07:08:32 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:33,
                 from test.c:3:
heap.c: In function ‘heap_pop’:
heap.c:50:24: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘void *’
   50 |   pq -> heapArray[0] = NULL;
      |                        ^~~~
Compilation failed
10dad76
